[metadata handler] fix shifting of Canvas when handler is opened; increase handler's height

--- a/game-library/src/assets/styles/App.scss
+++ b/game-library/src/assets/styles/App.scss
@@ -34,8 +34,9 @@ body {
   justify-content: center;
   align-items: center; 
   display: flex;
-  position: relative;
+  position: absolute;
   width: 100%;
+  height: 100%;
   z-index: 20;
   background-color: rgba(0, 0, 0, 0.5);
   margin: auto;
